# my-package-with-semver

./: CHANGELOG.md  main.py  pyproject.toml
.github/workflows/: release.yml
