[project]
name = "my-package-with-semver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
]

[tool.semantic_release]
branch = "main"
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
